# etl-automation

./: .gitignore  AUTOMATION_SUMMARY.md  DEPLOYMENT.md  README.md  __init__.py  __main__.py  api.py  cli.py  pyproject.toml  requirements.txt  restart.ps1
checks/: aggregate.py  base.py  data_compare.py  duplicate.py  metadata.py  null_empty.py  registry.py  row_count.py
connectors/: base.py  csv_connector.py  registry.py  sqlite_connector.py  teradata.py
engine/: batch.py  executor.py  intelligent.py  profiler.py  resilience.py  result_store.py  suite_loader.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  theme.js
frontend/src/components/: ConnectionPicker.jsx  Shared.jsx  (+1 more)
reports/: excel.py  html.py  junit.py
test_data/: src_TABLE_001.csv  src_TABLE_002.csv  src_TABLE_003.csv  src_TABLE_005.csv  src_TABLE_006.csv  src_TABLE_009.csv  src_TABLE_011.csv  src_TABLE_012.csv  src_TABLE_014.csv  src_TABLE_016.csv  src_TABLE_019.csv  src_TABLE_021.csv  src_TABLE_023.csv  src_TABLE_024.csv  src_TABLE_026.csv  src_TABLE_028.csv  src_TABLE_031.csv  src_TABLE_032.csv  src_TABLE_035.csv  src_TABLE_036.csv  src_TABLE_038.csv  src_TABLE_039.csv  src_TABLE_041.csv  src_TABLE_042.csv  src_TABLE_045.csv  src_TABLE_046.csv  src_TABLE_048.csv  src_TABLE_049.csv  tgt_TABLE_001.csv  tgt_TABLE_004.csv  tgt_TABLE_006.csv  tgt_TABLE_007.csv  tgt_TABLE_008.csv  tgt_TABLE_010.csv  tgt_TABLE_011.csv  tgt_TABLE_013.csv  tgt_TABLE_015.csv  tgt_TABLE_016.csv  tgt_TABLE_017.csv  tgt_TABLE_018.csv  (+20 more)
tests/: test_all_checks.py  test_db_diff.py
(+7 files in other folders)
