[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "etl-validator"
version = "1.0.0"
description = "Industry-grade ETL testing automation platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pandas>=2.0.0",
    "pyodbc>=5.0.0",
    "duckdb>=0.9.0",
    "xlsxwriter>=3.1.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
]

[project.scripts]
etl-validate = "etl_validator.cli:main"

[tool.setuptools.packages.find]
include = ["etl_validator*"]
